# OpenDepictor

./: CNAME  README.md
OpenDepictor_/: OpenDepictor.sln
OpenGLTestingEnvironment_/OpenGLTestingEnvironment/: .Source.cpp.swp  .Triangle.h.swp  BoolArray.h  CMakeLists.txt  Color.cpp  Instructions.md  OpenGLTestingEnvironment.vcxproj  OpenGLTestingEnvironment.vcxproj.filters  RegularPolygon.cpp  RegularPolygon.h  Shaders.h  Source.cpp  TextureLoading.cpp  Triangle.cpp  Triangle.h  Vector3.cpp  Vector3.h  a.out  glad.c  stb_image.cpp  stb_image.h
OpenGLTestingEnvironment_/OpenGLTestingEnvironment/HeaderFiles/: Triangle.h
OpenGLTestingEnvironment_/OpenGLTestingEnvironment/HeaderFiles/VariableObjects/: Color.h  Vector3.h
OpenGLTestingEnvironment_/OpenGLTestingEnvironment/assets/: glad.c
OpenGLTestingEnvironment_/OpenGLTestingEnvironment/assets/glad/: glad.h
OpenGLTestingEnvironment_/OpenGLTestingEnvironment/include/: .RegularPolygon.h.swp  Conductor.h  ControllerHandler.h  DebugVertexController.h  Errors.h  Note.h  RegularPolygon.h  RegularPolygon.hpp  Shader.h  Shader.hpp  Source.h  SpriteRenderer.h  Texture.h  Texture.hpp  Triangle.h  Triangle.hpp
OpenGLTestingEnvironment_/OpenGLTestingEnvironment/shaders/: sprite.frag
OpenGLTestingEnvironment_/OpenGLTestingEnvironment/src/: .Vector3.cpp.swp  Color.cpp  Conductor.cpp  ControllerHandler.cpp  DebugVertexController.cpp  Note.cpp  RegularPolygon.cpp  RenderingObjects.cpp  Shader.cpp  Source.cpp  SpriteRenderer.cpp  Texture.cpp  Triangle.cpp  Vector3.cpp  glad.c  stb_image.cpp
(+11 files in other folders)
